[package]
name = "tokio-request"
version = "0.1.0"
authors = ["Moritz Gunz <moritz.gunz@gmail.com>"]

readme = "An asynchronous HTTP client for Rust"
documentation = "https://docs.rs/tokio-request"
homepage = "https://github.com/NeoLegends/tokio-request"
keywords = ["http", "client", "request", "rest", "async", "asynchronous"]
license = "MIT"

[dependencies]
curl = "0.4.6"
futures = "0.1.13"
mime = "0.2.3"
rustc-serialize = { version = "0.3.24", optional = true }
serde = { version = "1.0.4", optional = true }
serde_json = { version = "1.0.2", optional = true }
tokio-core = "0.1.7"
tokio-curl = "0.1.9"
url = "1.4.0"

[features]
default = ["serde-serialization"]
rustc-serialization = ["rustc-serialize"]
serde-serialization = ["serde", "serde_json", "mime/serde"]
